--- a/style.css
+++ b/style.css
@@ -29,36 +29,11 @@ html, body {
 }
 
 /* Embbeded Hotspot */
-#iframeselect {
-  position: absolute;
-  width: 120px;
-  margin-left: -140px;
-  border-radius: 10px;
-  overflow: hidden;
-  opacity: 0.95;
-}
-
-#iframeselect li{
-  width: 100%;
-  padding: 1em;
-  font-size: 12px;
-  text-align: center;
-  background-color: #444;
-  color: #ddd;
-  transition: .3s background-color ease-in-out,
-              .3s color ease-in-out;
-}
-
-#iframeselect li:hover{
-  background-color: #666;
-  color: #fff;
-}
-
-#iframespot {
+.iframespot {
   background-color: #444;
   position: relative;
-  width: 1280px;
-  height: 480px;
+  width: 640px;
+  height: 640px;
 }
 
 #iframespot .message {
