--- a/style.css
+++ b/style.css
@@ -860,3 +860,7 @@ body.view-control-buttons .viewControlButton {
 .viewControlButton-6 {
   margin-left: 105px;
 }
+.viewControlButton-7 {
+  margin-left: 155px;
+}
+
