--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,6 @@ h6 {
   z-index: 997;
   transition: all 0.5s;
   background: rgba(42, 44, 57, 0.9);
-
 }
 
 #header.header-transparent {
@@ -102,6 +101,7 @@ h6 {
   line-height: 1;
   font-weight: 700;
   letter-spacing: 1px;
+  float: right;
 }
 
 #header .logo h1 a,
@@ -114,6 +114,7 @@ h6 {
   padding: 0;
   margin: 0;
   max-height: 40px;
+  float: right;
 }
 
 /*--------------------------------------------------------------
