--- a/style.css
+++ b/style.css
@@ -863,6 +863,40 @@ body.view-control-buttons .viewControlButton {
 .viewControlButton-7 {
   margin-left: 145px;
 }
+
+.mobile #viewControlButton-7 {
+  width: 50px;
+  height: 50px;
+}
+
+body.viewControlButton-7-enabled #viewControlButton-7 {
+  display: block;
+  visibility: visible;
+  
+}
+.viewControlButton-7 .icon.on {
+  display: none;
+  visibility: hidden;
+}
+
+.viewControlButton-7 .icon.off {
+  display: block;
+  visibility: visible;
+
+}
+
+.viewControlButton-7.enabled .icon.on {
+  display: block;
+  visibility: visible;
+
+}
+
+.viewControlButton-7.enabled .icon.off {
+  display: none;
+  visibility: hidden;
+
+}
+
 .viewControlButton-8 {
   margin-left: -205px;
 }
